# panorama-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
assets/: panorama-icons.afdesign
data/: peaks-rated.tsv  summits.tsv
data/geofabrik-peaks/: austria-peaks.json.zst  czech-republic-peaks.json.zst  dolnoslaskie-peaks.json.zst  malopolskie-peaks.json.zst  opolskie-peaks.json.zst  slaskie-peaks.json.zst  slovakia-peaks.json.zst  slovenia-peaks.json.zst
deploy/: README.md  deploy.sh  nginx-panorama.conf  panorama.container
docs/: ideas.md  mobile-app-plan.md  sky-palette-notes.md  summit-annotation-notes.md
scripts/: bake_font_sdf.py  build_peaks_db.py  download_hgt.py  download_osm_peaks.py  download_osm_summits.py  dump_dist_native.py  extract_geofabrik_peaks.py  make_icons.py  make_sky_palette.py  mirror_hgt.py  render_sunset_anim.py
src/: annotate.cpp  distmap.cpp  distmap.hpp  geo.hpp  heightmap.cpp  heightmap.hpp  main.cpp  parallel.hpp  pngwrite.cpp  pngwrite.hpp  prominence_main.cpp  sdftext.cpp  sdftext.hpp  summits.cpp  summits.hpp  tonemap.cpp  tonemap.hpp  view.hpp  wasm_api.cpp
web/: app.js  index.html  manifest.webmanifest  sky-palette.json  sw.js  test-node.mjs  worker.js
